--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta name="description" content="Venta de alimentos para mascotas baño y peluqueria">
 <meta name="keywords" content="venta de alimentos para mascotas,perros, gatos, mscotas en general, peluqueria canina, gatunos, todo para su mascota, pets quito, mascotas quito, perrarina, pelet perro, mascotas santa clara, baño gatos">
 
-<title>index</title>
+<title>PDF Curricullum FABRICIO AGUIRRE T.</title>
 <!-- write your code here -->
 <style>
   #animation_container {
